syntax = "proto3";

package com.metao.book;
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.metao.book.shared";

message OrderUpdatedEvent {
  string id = 1;
  // Last updated date.
  optional google.protobuf.Timestamp update_time = 8;
  string customerId = 10;
  string productId = 2;
  Status status = 3;
  double quantity = 4;
  double price = 5;
  string currency = 6;
  enum Status {
    NEW = 0;
    SUBMITTED = 1;
    REJECTED = 2;
    CONFIRMED = 3;
    ROLLED_BACK = 4;
  };

  message UUID {
    // typedef string
  }
}

